// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Setup API nested should be possible to change the underlying DOM tag of the Transition component and Transition.Child components 1`] = `
<div
  class="My Page"
>
  <article
    data-enter=""
    data-from=""
    data-headlessui-state="from enter transition"
    data-transition=""
    style=""
  >
    <aside
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Sidebar
    </aside>
    <section
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Content
    </section>
  </article>
</div>
`;

exports[`Setup API nested should be possible to change the underlying DOM tag of the Transition.Child components 1`] = `
<div
  class="My Page"
>
  <div
    data-enter=""
    data-from=""
    data-headlessui-state="from enter transition"
    data-transition=""
    style=""
  >
    <aside
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Sidebar
    </aside>
    <section
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Content
    </section>
  </div>
</div>
`;

exports[`Setup API nested should be possible to nest transition components 1`] = `
<div
  class="My Page"
>
  <div
    data-enter=""
    data-from=""
    data-headlessui-state="from enter transition"
    data-transition=""
    style=""
  >
    <div
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Sidebar
    </div>
    <div
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
      style=""
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Setup API nested should be possible to use render props on the Transition and Transition.Child components 1`] = `
<div
  class="My Page"
>
  <article
    data-enter=""
    data-from=""
    data-headlessui-state="from enter transition"
    data-transition=""
  >
    <aside
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
    >
      Sidebar
    </aside>
    <section
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
    >
      Content
    </section>
  </article>
</div>
`;

exports[`Setup API nested should be possible to use render props on the Transition.Child components 1`] = `
<div
  class="My Page"
>
  <div
    data-enter=""
    data-from=""
    data-headlessui-state="from enter transition"
    data-transition=""
    style=""
  >
    <aside
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
    >
      Sidebar
    </aside>
    <section
      data-enter=""
      data-from=""
      data-headlessui-state="from enter transition"
      data-transition=""
    >
      Content
    </section>
  </div>
</div>
`;

exports[`Setup API nested should yell at us when we forget to wrap the \`<Transition.Child />\` in a parent <Transition /> component 1`] = `"A <Transition.Child /> is used but it is missing a parent <Transition /> or <Transition.Root />."`;

exports[`Setup API nested should yell at us when we forgot to forward a ref on the Transition component 1`] = `"Did you forget to passthrough the \`ref\` to the actual DOM node?"`;

exports[`Setup API nested should yell at us when we forgot to forward the ref on one of the Transition.Child components 1`] = `"Did you forget to passthrough the \`ref\` to the actual DOM node?"`;

exports[`Setup API shallow should be possible to change the underlying DOM tag 1`] = `
<span
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
  style=""
>
  Children
</span>
`;

exports[`Setup API shallow should be possible to use a render prop 1`] = `
<span
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
>
  Children
</span>
`;

exports[`Setup API shallow should passthrough all the props (that we do not use internally) 1`] = `
<div
  class="text-blue-400"
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
  id="root"
  style=""
>
  Children
</div>
`;

exports[`Setup API shallow should passthrough all the props (that we do not use internally) even when using an \`as\` prop 1`] = `
<a
  class="text-blue-400"
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
  href="/"
  style=""
>
  Children
</a>
`;

exports[`Setup API shallow should render another component if the \`as\` prop is used and its children by default 1`] = `
<a
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
  style=""
>
  Children
</a>
`;

exports[`Setup API shallow should render nothing when the show prop is false 1`] = `null`;

exports[`Setup API shallow should yell at us when we forget to forward the ref when using a render prop 1`] = `"Did you forget to passthrough the \`ref\` to the actual DOM node?"`;

exports[`Setup API transition classes should be possible to passthrough the transition classes 1`] = `
<div
  data-enter=""
  data-from=""
  data-headlessui-state="from enter transition"
  data-transition=""
  style=""
>
  Children
</div>
`;

exports[`Setup API transition classes should be possible to passthrough the transition classes and immediately apply the enter transitions when appear is set to true 1`] = `
<div
  class="enter enter-from"
  data-from=""
  data-headlessui-state="from"
  style=""
>
  Children
</div>
`;

exports[`should yell at us when we forget the required show prop 1`] = `"A <Transition /> is used but it is missing a \`show={true | false}\` prop."`;
